fixed issue of ProgressBar fill not covering the corners of the bar on mobile

--- a/src/components/ProgressBar/styles.scss
+++ b/src/components/ProgressBar/styles.scss
@@ -19,7 +19,7 @@
 
   &__fill {
     width: 0%;
-    height: 20rem;
+    height: 30rem;
     background-color: $green;
     transition: 0.33s ease-out;
   }
